# Figment

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: test.sh
src/: coalesce.rs  error.rs  figment.rs  jail.rs  lib.rs  metadata.rs  profile.rs  provider.rs  util.rs
src/providers/: data.rs  env.rs  mod.rs  serialized.rs
src/value/: de.rs  escape.rs  magic.rs  mod.rs  parse.rs  ser.rs  tag.rs  tag_id.rs  value.rs
tests/: camel-case.rs  cargo.rs  custom_env_parser.rs  empty-env-vars.rs  enum.rs  flexible_values.rs  lossy_values.rs  profile-tag.rs  tagged.rs  tuple-struct.rs  yaml-enum.rs
